# data-collector

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
BrowserCollector/: collect_browser_data.ps1
office_collector/: OfficeMove.ps1  README.md
scripts/: build.ps1  build.sh
telegram_collector/: __init__.py  __main__.py  auth.py  cli.py  client.py  collector.py  config.py  logging_setup.py  media.py  progress.py  ratelimit.py  serializers.py  state.py  storage.py  users.py
